Project

General

Profile

Actions

Bug #15949

closed

Potential crash during rbd-mirror shutdown

Added by Jason Dillaman almost 8 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If the JournalPlayer is in the WATCH_STEP_ASSERT stage and the journal is closed, there might be an in-flight op request that needs to be completed before proceeding.

http://qa-proxy.ceph.com/teuthology/trociny-2016-05-19_11:10:26-rbd-wip-mgolub-testing---basic-vps/202079/teuthology.log

Program terminated with signal SIGABRT, Aborted.
#0  0x00007f687dc3320b in raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/pt-raise.c:37
37      ../nptl/sysdeps/unix/sysv/linux/pt-raise.c: No such file or directory.
(gdb) bt
#0  0x00007f687dc3320b in raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/pt-raise.c:37
#1  0x00007f6888159ac5 in ?? ()
#2  <signal handler called>
#3  0x00007f687c4d8cc9 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
#4  0x00007f687c4dc0d8 in __GI_abort () at abort.c:89
#5  0x00007f68881a31e5 in ceph::__ceph_assert_fail(char const*, char const*, int, char const*) ()
#6  0x00007f6887f9a384 in ?? ()
#7  0x00007f68880fd542 in journal::JournalPlayer::handle_watch_assert_active(int) ()
#8  0x00007f6887fb710a in FunctionContext::finish(int) ()
#9  0x00007f6887fad399 in Context::complete(int) ()
#10 0x00007f6887fad399 in Context::complete(int) ()

Related issues 1 (0 open1 closed)

Copied to rbd - Backport #16055: jewel: Potential crash during rbd-mirror shutdownResolvedJason DillamanActions
Actions #1

Updated by Jason Dillaman almost 8 years ago

  • Status changed from New to In Progress
  • Assignee set to Jason Dillaman
Actions #2

Updated by Jason Dillaman almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Jason Dillaman almost 8 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to jewel
Actions #4

Updated by Jason Dillaman almost 8 years ago

  • Copied to Backport #16055: jewel: Potential crash during rbd-mirror shutdown added
Actions #5

Updated by Jason Dillaman almost 8 years ago

  • Status changed from Pending Backport to Resolved
  • Target version set to v10.2.2
Actions #6

Updated by Nathan Cutler over 7 years ago

  • Target version deleted (v10.2.2)
Actions

Also available in: Atom PDF